--- a/app/src/main/res/layout/activity_them_sp.xml
+++ b/app/src/main/res/layout/activity_them_sp.xml
@@ -20,7 +20,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Thêm sản phẩm"
+            android:text="YTB: DoubleD"
             android:textColor="@android:color/white"
             android:textSize="18sp" />
     </androidx.appcompat.widget.Toolbar>
